--- a/simple/parameters.simple.yaml
+++ b/simple/parameters.simple.yaml
@@ -12,18 +12,21 @@ resources:
 - name: deployment
   type: deployment.py
   properties:
-    serverVersion: 5.5.0
+    serverUrl: valServerUrl
+    serverUser: valServerUser
+    serverPassword: valServerPassword
+    serverVersion: valServerVersion
     syncGatewayVersion: 2.0.0
     couchbaseUsername: couchbase
     couchbasePassword: foo123!
     license: byol
     clusters:
       - cluster: cluster1
-        region: us-east1
+        region: us-west2
         groups:
           - group: group1
             diskSize: 100
-            nodeCount: 3
+            nodeCount: valNodeCount
             nodeType: n1-standard-4
             services:
               - data
